grammar.js
    source_file: $ => repeat($._item),

    _item: $ => choice(
      $.import_declaration,
      $.function_definition,
      $.type_definition,
      $.variable_definition,
      $._expression,
    ),

    // ============================================================================
    // IMPORTS AND MODULES
    // ============================================================================

    import_declaration: $ => seq(
      'import',
      $.module_path,
      optional(seq('as', $.identifier)),
    ),

    module_path: $ => sep1($.identifier, '/'),

    // ============================================================================
    // FUNCTION AND TYPE DEFINITIONS  
    // ============================================================================

    function_definition: $ => choice(
      // Function with type signature: def f : Type : body
      seq(
        'def',
        $.identifier,
        optional($.type_parameters),
        ':',
        $._type,
        ':',
        $._expression,
      ),
      // Function with parameters: def f(x: A) -> B : body
      seq(
        'def',
        $.identifier,
        optional($.type_parameters),
        optional($.parameters),
        optional(seq('->', $._type)),
        ':',
        $._expression,
      ),
    ),

    type_definition: $ => seq(
      'type',
      $.identifier,
      optional($.type_parameters),
      optional($.parameters),
      ':',
      repeat1($.constructor_case),
    ),

    // ============================================================================
    // PARAMETERS AND TYPE PARAMETERS
    // ============================================================================

    parameters: $ => seq(
      '(',
      sep($.parameter, ','),
      ')',
    ),

    parameter: $ => seq(
      $.identifier,
      ':',
      $._type,
    ),

    type_parameters: $ => seq(
      '<',
      sep1($.type_parameter, ','),
      '>',
    ),

    type_parameter: $ => choice(
      $.identifier,
      seq($.identifier, ':', $._type),
    ),

    // Implicit parameters with curly braces
    _type: $ => choice(
      $.type_universe,      // Set
      $.empty_type,         // Empty
      $.unit_type,          // Unit
      $.boolean_type,       // Bool
      $.natural_type,       // Nat
      $.numeric_type,       // U64, I64, F64, Char
      $.function_type,      // all x: A. B (Π-types)
      $.sigma_type,         // any x: A. B (Σ-types) 
      $.sigma_simple,       // A . B
      $.equality_type,      // T{a == b}
      $.list_type,          // T[]
      $.enum_type,          // {&foo, &bar}
      $.self_type,          // Self
      $.metavar,            // ?M:T{ctx}
      $.parenthesized_type,
      $.type_application,
      $.identifier,         // Type variables
    ),

    type_universe: $ => 'Set',
    natural_type: $ => 'Nat',
    
    function_type: $ => choice(
      // Full form: all x: A. B
      prec.right(PREC.FUNCTION_TYPE, seq(
        choice('all', '∀'),
        sep1(seq($.identifier, ':', $._type), ','),
        '.',
        $._type,
      )),
      // Simple form: A -> B
      prec.right(PREC.FUNCTION_TYPE, seq(
        $._type,
        '->',
        $._type,
      )),
    ),

    // Dependent pair types (Σ-types) - Sig constructor
    equality_type: $ => seq(
      $._type,
      '{',
      $._expression,
      choice('==', '!='),
      $._expression,
      '}',
    ),

    // List types - Lst constructor
    list_type: $ => prec(PREC.TIGHT_POSTFIX, seq($._type, '[]')),

    // Enum types - Enu constructor
    type_application: $ => prec(PREC.APPLICATION, seq(
      $.identifier,
      choice(
        // Explicit type application: F<A, B>
        seq('<', sep1($._type, ','), '>'),
        // Regular application: F(A, B)
        seq('(', sep($._type, ','), ')'),
      ),
    )),

    // ============================================================================
    // CONSTRUCTOR AND ENUM DEFINITIONS
    // ============================================================================

    constructor_case: $ => seq(
      'case',
      $.constructor_tag,
      ':',
      repeat($.field_declaration),
    ),

    field_declaration: $ => seq(
      $.identifier,
      ':',
      $._type,
    ),

    constructor_tag: $ => seq('@', $.identifier),

    _expression: $ => choice(
      // Variables and references
      $.identifier,           // Var constructor
      $.reference,           // Ref constructor  
      $.substitution,        // Sub constructor
      
      // Literals and basic terms
      $.literal,
      $.unit_literal,        // One constructor
      $.empty_list,          // Nil constructor
      $.era_expression,      // Era constructor (*)
      
      // Constructor and enum terms
      $.constructor_tag,
      $.constructor_application,
      $.enum_symbol,         // Sym constructor
      $.enum_literal,
      
      // Lambda expressions
      $.lambda_expression,   // Lam constructor
      $.lambda_match,        // Various lambda match constructors (EmpM, UniM, BitM, etc.)
      $.fix_expression,      // Fix constructor (μ)
      
      // Application
      $.application_expression,  // App constructor
      $.implicit_application,
      
      // Control flow
      $.if_expression,
      $.fork_expression,     // Frk constructor
      $.match_expression,    // Pat constructor
      $.tilde_expression,    // For induction
      $.tilde_match,         // Pattern matching with tilde
      
      // Binary operations
      $.binary_expression,   // Op2 constructor
      $.unary_expression,    // Op1 constructor
      
      // Binding constructs
      $.let_expression,      // Let constructor
      $.use_expression,      // Use constructor
      
      // Proof and equality
      $.rewrite_expression,  // Rwt constructor
      $.reflexivity_proof,   // Rfl constructor ({==})
      $.trust_expression,    // Tst constructor
      $.absurd_expression,
      
      // Advanced features
      $.superposition,       // Sup constructor
      $.log_expression,      // Log constructor
      $.view_expression,
      $.primitive_function,  // Pri constructor
      
      // Annotation and grouping
      $.type_check,          // Chk constructor
      $.parenthesized_expression,
      
      // List operations
      $.list_literal,
      $.return_expression,
      
      // Numbers and numeric operations are covered by $.literal
      
      // Pairs
      $.tuple_expression,    // Tup constructor
      
      // Allow types as expressions in dependent contexts
      $._type,
    ),

    // ============================================================================
    // VARIABLES AND REFERENCES
    // ============================================================================

    // Ref constructor
    lambda_expression: $ => prec.right(seq(
      choice('lambda', 'λ'),
      choice(
        // Pattern lambdas: λ(x,y). body
        seq(
          repeat1(choice(
            $.identifier,
            seq('(', sep1($.pattern, ','), ')'),
            seq($.identifier, ':', $._type),
            seq('(', $.identifier, ':', $._type, ')'),
          )),
          '.',
          $._expression,
        ),
        // Match form lambda: λ{cases}
        seq(
          '{',
          repeat($.lambda_match_case),
          '}',
        ),
      ),
    )),

    // Lambda match expressions - Various *M constructors
    nat_match: $ => seq(
      '0n', ':', $._expression, optional(';'),
      '1n+', ':', $._expression, optional(';'),
    ),

    lambda_match_case: $ => choice(
      $.unit_match,
      $.bool_match,
      $.nat_match,
      $.list_match,
      $.pair_match,
      $.enum_match,
      $.sup_match,
      $.equality_match,
    ),

    // Fixed point expressions - Fix constructor (μx. f)
    application_expression: $ => choice(
      // Tight polymorphic application: f<A,B>(x,y) - no spaces
      prec(PREC.TIGHT_POSTFIX, seq(
        $.identifier,
        token.immediate('<'),
        sep1($._expression, ','),
        token.immediate('>'),
        token.immediate('('),
        sep($._expression, ','),
        ')',
      )),
      
      // Tight regular application: f(x,y) - no spaces
      prec(PREC.TIGHT_POSTFIX, seq(
        $.identifier,
        token.immediate('('),
        sep($._expression, ','),
        ')',
      )),
      
      // Loose polymorphic application: f <A,B> (x,y) - with spaces
      prec(PREC.APPLICATION, seq(
        $.identifier,
        '<',
        sep1($._expression, ','),
        '>',
        '(',
        sep($._expression, ','),
        ')',
      )),
      
      // Loose regular application: f (x,y) - with spaces
      prec(PREC.APPLICATION, seq(
        $.identifier,
        '(',
        sep($._expression, ','),
        ')',
      )),
      
      // Space-separated application: f x (avoid conflicts with unary expressions)
      prec.left(PREC.APPLICATION, seq(
        field('function', $._expression),
        field('argument', $._expression),
      )),
    ),

    // Implicit application: f{x,y}
    match_expression: $ => prec.right(seq(
      'match',
      repeat1($._expression),
      ':',
      repeat($.with_clause),
      repeat1($.match_case),
    )),

    // With clauses for affine variables
    match_case: $ => seq(
      'case',
      repeat1($.pattern),
      ':',
      $._expression,
    ),

    // Tilde expressions for induction
    binary_expression: $ => choice(
      // Exponentiation (right associative)
      prec.right(PREC.EXPONENTIATION, seq($._expression, '**', $._expression)),
      
      // Multiplication and division (left associative)
      prec.left(PREC.MULTIPLICATION, seq($._expression, '*', $._expression)),
      prec.left(PREC.MULTIPLICATION, seq($._expression, '/', $._expression)),
      prec.left(PREC.MULTIPLICATION, seq($._expression, '%', $._expression)),
      
      // Addition and subtraction (left associative)
      prec.left(PREC.ADDITION, seq($._expression, '+', $._expression)),
      prec.left(PREC.ADDITION, seq($._expression, '-', $._expression)),
      
      // Bitwise shifts
      prec.left(PREC.BITWISE_SHIFT, seq($._expression, '<<', $._expression)),
      prec.left(PREC.BITWISE_SHIFT, seq($._expression, '>>', $._expression)),
      
      // Comparisons
      prec.left(PREC.COMPARISON, seq($._expression, '<', $._expression)),
      prec.left(PREC.COMPARISON, seq($._expression, '>', $._expression)),
      prec.left(PREC.COMPARISON, seq($._expression, '<=', $._expression)),
      prec.left(PREC.COMPARISON, seq($._expression, '>=', $._expression)),
      
      // Equality
      prec.left(PREC.EQUALITY, seq($._expression, '==', $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, '!=', $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, '===', $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, '!==', $._expression)),
      
      // Logical operations
      prec.left(PREC.LOGICAL_AND, seq($._expression, 'and', $._expression)),
      prec.left(PREC.LOGICAL_XOR, seq($._expression, 'xor', $._expression)),
      prec.left(PREC.LOGICAL_OR, seq($._expression, 'or', $._expression)),
      
      // List cons (right associative) - Con constructor
      prec.right(PREC.LIST_CONS, seq($._expression, '<>', $._expression)),
      
      // Function type (right associative)
      prec.right(PREC.FUNCTION_TYPE, seq($._expression, '->', $._expression)),
      
      // Product type (right associative)
      prec.right(PREC.PRODUCT_TYPE, seq($._expression, '&', $._expression)),
      
      // Type check
      prec.right(PREC.TYPE_CHECK, seq($._expression, '::', $._expression)),
      
      // Assignment (right associative)
      prec.right(PREC.ASSIGNMENT, seq($._expression, '=', $._expression)),
    ),

    // Op1 constructor
    unary_expression: $ => choice(
      prec(PREC.UNARY, seq('not', $._expression)),
      prec(PREC.UNARY, seq('-', $._expression)),
      prec(PREC.UNARY, seq('~', $._expression)),
    ),

    // ============================================================================
    // BINDING CONSTRUCTS
    // ============================================================================

    // Let constructor
    let_expression: $ => seq(
      $.identifier,
      optional(seq(':', $._type)),
      '=',
      $._expression,
      ';',
      $._expression,
    ),

    // Use constructor
    rewrite_expression: $ => seq(
      'rewrite',
      $._expression,
      $._expression,
    ),

    // Rfl constructor
    reflexivity_proof: $ => choice('{==}', 'finally'),

    // Tst constructor
    log_expression: $ => seq(
      'log',
      $._expression,
      $._expression,
    ),

    // View expressions
    view_expression: $ => seq(
      'view',
      '(',
      $.identifier,
      ')',
    ),

    // Pri constructor
    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // ============================================================================
    // PATTERNS
    // ============================================================================

    pattern: $ => choice(
      $.identifier,
      $.literal,
      $.constructor_tag,
      $.constructor_application,
      $.enum_symbol,
      $.arithmetic_pattern,
      $.tuple_pattern,
      $.list_pattern,
      $.parenthesized_pattern,
    ),

    arithmetic_pattern: $ => seq(
      $.literal,
      '+',
      $.identifier,
    ),

    tuple_pattern: $ => seq(
      '(',
      sep1($.pattern, ','),
      ')',
    ),

    list_pattern: $ => choice(
      '[]',
      seq('[', sep1($.pattern, ','), ']'),
      seq($.pattern, '<>', $.pattern),
    ),

    empty_list: $ => '[]',

    return_expression: $ => seq('return', $._expression),

    // Tup constructor
    tuple_expression: $ => seq(
      '(',
      $._expression,
      ',',
      sep1($._expression, ','),
      ')',
    ),

    // ============================================================================
    // LITERALS
    // ============================================================================

    literal: $ => choice(
      $.boolean_literal,
      $.nat_literal,
      $.integer_literal,
      $.float_literal,
      $.character_literal,
      $.string_literal,
    ),

    nat_literal: $ => choice('0n', seq(/[1-9]\d*/, 'n')), // Zer, Suc constructors
    
    // Val constructor for numeric values
    integer_literal: $ => token(choice(
      /\d+/,
      seq('+', /\d+/),
      seq('-', /\d+/),
    )),
    
    string_literal: $ => token(seq(
      '"',
      repeat(choice(
        /[^"\\]/,
        seq('\\', choice('n', 't', 'r', '0', '\\', "'", '"')),
        seq('\\u', /[0-9a-fA-F]{4}/),
      )),
      '"',
    )),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_\/]*/,

    line_comment: $ => token(seq('#', /.*/)),
    
    block_comment: $ => token(seq(
      '{-',
      repeat(choice(
        /[^{-]+/,
        '{',
        '-',
        seq('{', /[^-]/),
        seq('-', /[^}]/),
      )),
      '-}',
    )),
  }
});

// ============================================================================
// HELPER FUNCTIONS
// ============================================================================

function sep(rule, separator) {
  return optional(sep1(rule, separator));
}

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
